# LocalizacionMCL

./: .gitignore  INTEGRATION.md  README.md
src/puzzlebot_control/: package.xml  setup.py
src/puzzlebot_control/puzzlebot_control/: dead_reckoning.py  generate_map.py  localization_node.py  map_loader.py  maze_builder.py  maze_map.yaml  mcl.py  particle_filter.py  wheel_odometry.py
src/puzzlebot_gz/: CMakeLists.txt  package.xml
src/puzzlebot_gz/config/: gz_bridge.yaml
src/puzzlebot_gz/launch/: mcl.launch.py  sim.launch.py
src/puzzlebot_gz/rviz/: mcl_rviz.rviz
src/puzzlebot_gz/urdf/: puzzlebot_gz.sdf  puzzlebot_gz.urdf
src/puzzlebot_gz/worlds/: flat_plane.sdf  maze.sdf
